# trade_simulator

trade_simulator/: .gitignore  Makefile  README.md  main.py  pyproject.toml
trade_simulator/scripts/: get_btc_usd_chart.sh
trade_simulator/tests/: test_chart_db.py  test_trade_simulator.py
trade_simulator/tests/fixture/: btc_usd.csv
trade_simulator/trade_simulator/: chart_db.py  olhcv.py  simulator.py  trade_simulator.py
