[tool.poetry]
name = "trade-simulator"
version = "0.1.0"
description = ""
authors = ["1119-2916 <ti11192916@gmail.com>"]
readme = "README.md"
packages = [{include = "trade_simulator"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
